2009-03-06  Jens Granseuer  <jensgr@gmx.net>

	* gnome-default-applications-properties.glade: fix mnemonics conflict
	for web browser and mail reader command widgets. There's another
	conflict for the "Run in terminal" checkbox but that one will have to
	wait until string freeze is over

==================== 2.25.90 ====================

2009-01-30  Bastien Nocera  <hadess@hadess.net>

	* gnome-da-capplet.c (web_radiobutton_toggled_cb): Fix potential
	crasher when web_radiobutton_toggled_cb is called and the
	browser in GConf doesn't exist on the system anymore

2009-01-28  Jens Granseuer  <jensgr@gmx.net>

	* gnome-da-capplet.c: (web_combo_changed_cb): update the entry with
	the correct command for the selected option instead of always using
	the default

2009-01-20  Bastien Nocera  <hadess@hadess.net>

	* gnome-da-capplet.c (web_radiobutton_toggled_cb),
	(web_combo_changed_cb), (web_combo_conv_to_widget): Fix the https
	handler never being set (Closes: #568408)

==================== 2.25.3 ====================
==================== 2.25.2 ====================
==================== 2.25.1 ====================

Fri Oct 24 18:22:22 2008  Søren Sandmann  <sandmann@redhat.com>

	* gnome-da-capplet.c (main): Use new capplet_init() function

Fri Oct 24 17:54:17 2008  Søren Sandmann  <sandmann@redhat.com>

	* gnome-da-capplet.c (main): Fix to use gtk_init_with_args() correctly.

Fri Oct 24 17:31:40 2008  Søren Sandmann  <sandmann@redhat.com>

	* gnome-da-capplet.c (main): Replace use of gnome_program_init()
	with gtk_init_with_args()

2008-10-10  Bastien Nocera  <hadess@hadess.net>

	* gnome-default-applications.xml.in: Fix build failure caused by last
	commit

2008-10-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-default-applications.xml.in: add Listen to the list of media
	players. Patch by Julien Lavergne

==================== 2.24.0.1 ====================

2008-09-03  Jens Granseuer  <jensgr@gmx.net>
