@@ -1,3 +1,8 @@
+2009-04-06  Matthias Clasen <mclasen@redhat.com>
+
+	* gnome-da-capplet.c: Prevent the custom entries from getting out of
+	sync with their backing GConf entry. (#578089)
+
 2009-03-06  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-default-applications-properties.glade: fix mnemonics conflict
